# radiance

./: CMakeLists.txt  README.md  asm notes  radiance.asm
display/: CMakeLists.txt  display.inc  interface.asm
display/sdl2/: CMakeLists.txt  constants.inc  event.asm  event.inc
engine/: CMakeLists.txt  clock.asm  type.inc  util.asm
engine/draw/: CMakeLists.txt
engine/event/: CMakeLists.txt  artifact.inc  dispatcher.asm  member.inc  organizer.asm  register.asm  types.inc
macros/: common.inc  lib.inc  type.inc  util.inc
test/: build.sh  test.asm
